7. Scanner [#504791 #236178]